<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/addRelationshipsDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_add_rel_description"
            android:textAlignment="viewStart"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewOwner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_add_rel_owner_name"
                android:textAlignment="viewStart"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextOwner"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:ems="10"
                android:hint="@string/fragment_add_rel_owner_name_placeholder"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewPartner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_add_rel_partner_name"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextPartner"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:ems="10"
                android:hint="@string/fragment_add_rel_partner_name_placeholder"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewStartDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_add_rel_relationships_start_date"
                android:textSize="20sp"
                android:textStyle="bold" />

            <CalendarView
                android:id="@+id/startDateCalendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/pink"
                android:selectedWeekBackgroundColor="@color/pink"
                android:showWeekNumber="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewPhotos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_add_rel_joint_photos"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/addJointPhotosButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#8BC34A"
                android:text="@string/fragment_add_rel_joint_photos_button" />

            <TextView
                android:id="@+id/textViewUploadedPhotos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="@string/fragment_add_rel_uploaded_joint_photos"
                android:textSize="20sp"
                android:textStyle="italic" />

            <com.denzcoskun.imageslider.ImageSlider
                android:id="@+id/uploadedPhotosSlider"
                android:layout_width="match_parent"
                android:layout_height="120dp" />

            <Button
                android:id="@+id/createRelationshipsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#8BC34A"
                android:text="@string/fragment_add_rel_create_button" />
        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>