<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    tools:context=".ui.moments.EditMomentFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/fragment_edit_moment_slogan"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_edit_moment_title"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/momentTitleInput"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:hint="@string/fragment_edit_moment_title_placeholder"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_edit_moment_type"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/momentTypeSpinner"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginVertical="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_edit_moment_timestamp"
                android:textSize="20sp"
                android:textStyle="bold" />

            <CalendarView
                android:id="@+id/momentTimestampCalendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_edit_moment_coordinates"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.yandex.mapkit.mapview.MapView
                android:id="@+id/momentAddressMap"
                android:layout_width="match_parent"
                android:layout_height="400dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_edit_moment_note"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/momentNote"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/fragment_edit_moment_note_placeholder"
                android:inputType="textMultiLine" />
        </LinearLayout>

        <Button
            android:id="@+id/momentEditButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:backgroundTint="#8BC34A"
            android:hint="@string/fragment_edit_moment_create_button"
            android:textColor="@color/white" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>