<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.statistics.StatisticsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/fragment_statistics_title"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_statistics_slogan"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_statistics_period"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/statisticsPeriodType"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginVertical="4dp" />

            <LinearLayout
                android:id="@+id/customPeriodLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_statistics_period_start"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <CalendarView
                    android:id="@+id/startDateCalendarView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_statistics_period_end"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <CalendarView
                    android:id="@+id/endDateCalendarView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/collectStatisticsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#8BC34A"
            android:text="@string/fragment_statistics_start_button" />

        <LinearLayout
            android:id="@+id/statisticsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/periodInfoText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_statistics_period_selected"
                android:textAlignment="center"
                android:textColor="#8BC34A"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/statisticsList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>