<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ui.home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/partnerNamesText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_home_partner_names"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="34sp"
                android:textStyle="bold"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/relationshipsDurationText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_home_duration_label"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/durationLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="20dp"
                android:textAlignment="center"
                android:textColor="@color/pink"
                android:textSize="28sp"
                android:textStyle="bold"
                tools:text="@string/fragment_home_duration" />

            <TextView
                android:id="@+id/anniversaryText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_home_anniversary"
                android:textAlignment="center"
                android:textSize="20sp" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_home_joint_photos"
                    android:textSize="20sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/jointPhotosView"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            </LinearLayout>

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginVertical="20dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_home_settings"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/goToMomentsButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:backgroundTint="#29D523"
                        android:text="@string/fragment_home_moments_button" />

                    <Button
                        android:id="@+id/removeRelationshipsButton"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        app:icon="@android:drawable/ic_menu_delete" />
                </LinearLayout>

            </LinearLayout>

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginVertical="20dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>